Initial Project Commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-./iRacing Deltabar Service/obj
-./iRacing Deltabar Service/bin
-./iRacing Deltabar Service/.vs
+iRacing Deltabar Service/obj
+iRacing Deltabar Service/bin
+iRacing Deltabar Service/.vs
+
