--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "iRacingSDK.Net"]
-	path = iRacingSDK.Net
-	url = https://github.com/vipoo/iRacingSDK.Net
+[submodule "iRacingSdkWrapper"]
+	path = iRacingSdkWrapper
+	url = https://github.com/NickThissen/iRacingSdkWrapper
