--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 iRacing Deltabar Service/obj
 iRacing Deltabar Service/bin
 iRacing Deltabar Service/.vs
-ServiceRunner/obj
-ServiceRunner/obj/bin
-ServiceRunner/obj/.vs
+ServiceRunnerLib/obj
+ServiceRunnerLib/obj/bin
+ServiceRunnerLib/obj/.vs
