Initial app design without UI

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ iRacing Deltabar Service/.vs
 ServiceRunnerLib/obj
 ServiceRunnerLib/bin
 ServiceRunnerLib/.vs
+iRacing Deltabar Service/ServiceRunnerApp/obj
+iRacing Deltabar Service/ServiceRunnerApp/bin
+iRacing Deltabar Service/ServiceRunnerApp/.vs
