Settings + UI + Serialization

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 iRacing Deltabar Service/obj
 iRacing Deltabar Service/bin
 iRacing Deltabar Service/.vs
+iRacing Deltabar Service/packages
 ServiceRunnerLib/obj
 ServiceRunnerLib/bin
 ServiceRunnerLib/.vs
